# eznak

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  hui.txt  project_digest.md  pyproject.toml  test2.txt  test_llm.py  test_media.py  test_random_llm.py
alembic/: env.py
alembic/versions/: 001_init.py  784ce0a789f1_add_datasets.py  785_add_datasets_unique.py  786_add_is_posting_channel.py  787_add_dataset_source_channel_id.py  788_add_prompt_templates.py
assets/fonts/: README.md
backend/: main.py
backend/api/: channels.py  deps.py  generation.py  posts.py  prompt_templates.py
backend/core/: config.py  config_loader.py  logging.py  prompts.py
backend/db/: models.py  session.py
backend/middleware/: logging_middleware.py
backend/services/: llm_pipeline.py  media_gen.py  scheduler.py
bot/: bot.py
config/: media.yaml  prompts.yaml
docs/: SUPABASE_DB.md
docs/tz/: epics logic todos.md  tehdolg.md  tz.md  инсайты.md
docs/tz/archive/: обудмывание с ллмкой.md  отфильтрованные идеи ллмки с тз.md  черновик идеи.md
references/eto znak/: messages.html  messages2.html  messages3.html  messages4.html
references/eto znak/stickers/: AnimatedSticker (1).tgs  AnimatedSticker.tgs
scripts/: create_bg.py  load_dataset_from_html.py  seed.py  seed_channel.py
